Change classes' package.