@@ -1,12 +1,13 @@
 // Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License.
 
-package com.azure.jca;
+package com.azure.jca.http;
 
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
@@ -16,13 +17,8 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 @Disabled
 public class AuthClientTest {
 
-    /**
-     * Test getAuthorizationToken method.
-     * 
-     * @throws Exception when a serious error occurs.
-     */
     @Test
-    public void testGetAuthorizationToken() throws Exception {
+    public void testGetAuthorizationToken() {
         String tenantId = System.getProperty("azure.keyvault.tenant-id");
         String clientId = System.getProperty("azure.keyvault.client-id");
         String clientSecret = System.getProperty("azure.keyvault.client-secret");
@@ -32,7 +28,7 @@ public class AuthClientTest {
             System.getProperty("azure.keyvault.aad-authentication-url"),
             tenantId,
             clientId,
-            URLEncoder.encode(clientSecret, "UTF-8")
+            URLEncoder.encode(clientSecret, StandardCharsets.UTF_8)
         );
         assertNotNull(result);
     }
